apps/tailnet-admin/base/ingresses.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-tailnet
  namespace: argocd
  annotations:
    tailscale.com/proxy-group: tailnet-ingress
    tailscale.com/tags: tag:shared-argocd
spec:
  defaultBackend:
    service:
      name: argocd-server
      port:
        name: https
  ingressClassName: tailscale
  tls:
    - hosts:
        - argocd
